-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.219 2008-03-12 02:27:08 guru Exp $
-----------------------------------------------------------------------------------------
2008-03-11	pwessel
	* grdgradient.c:	With -D -S the slopes were not set to NaN if data were NaN
	* gmt_map.c:	Bug in map clipping for -JG
	* gmt_support.c:	Improve map annotation for general perspective projection
	* gmt_proj.c:	Clip path for general perspective projection was not closed.

2008-03-11	remko
	* bin/gmtlogo:		Pushed text back up into 2 x 1 inch box. Put in isoloation mode
	* src/Colors.txt:	Reorganized list of RGB colors and names.
	* gmt_color{name,_rgb}.h:	Removed from CVS. Now created from Colors.txt
	* doc/sctipts/GMT_RGBchart.sh:	Added GMT logo. All sizes horizontal.
	* src/gmtcolors.txt:	New man page with color information.
	* src/Grdformats.txt:	Renamed from share/conf/gmt_formats.conf

2008-03-09	pwessel
	* pstext.c:		Parsing of -C complained about % sign
	
2008-03-09	remko
	* gmt_init.c, gmt_globals.h:	Moved GMT_N_MEDIA and GMT_N_UNIQUE to gmt_dimensions.h, which
				is automatically created.
	* gmt_media_name.h, gmt_media_size.h:	Added "statement" and "tabloid" sizes
	* doc/scripts/GMT_RGBchart.sh:	Script to create RGB color tiles added to CVS
	* doc/GMT_Appendix_I.tex:	Added RGB chart
	* www/gmt/doc/pdf/GMT_RGBchart_*.pdf:	Added A4, Letter and Ledger sized RGB charts

2008-03-07	remko
	* ex11/job11.*:		Added R, G, B, H, S, and V arrows.
	* doc/scripts/GMT_color_interpolate.sh:	New example on color palette interpolation.
	* doc/scripts/GMT_App_M_1.sh:	Make sure titles get centered on color bars.
	* doc/fig/{gimp*,hsv-cone}.png:	New imagery for Appendix I
	* doc/GMT_Appendix_I.tex:	Completely revamped Appendix I
	* doc/GMT_Chapter_7.tex:	Removed some ugly orphans.
	* doc/GMT_version.tex.in:	Removed "Version" from \GMTDOCVERSION
	* doc/GMT_Frontmatter.tex:	Added some more acknowledgments